Bug 328664 - empty text field for passwords
Summary: empty text field for passwords
Status: RESOLVED FIXED
Alias: None
Product: user-manager
Classification: Unmaintained
Component: kcontrol module (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords: usability
: 411143 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-12-11 13:47 UTC by Jonathan Riddell
Modified: 2019-08-23 14:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Riddell 2013-12-11 13:47:07 UTC
The password text edit is empty unless you have just entered a password.  This is confusing as you might think the password has been wiped.

Reproducible: Always

Steps to Reproduce:
1. Set a user's password
2. Password text edit will display dots for the letters you have entered
3. select another user then go back to the original user
Actual Results:  
text edit is empty

Expected Results:  
dots should be shown


If you don't want to show the dots (it gives away the number of characters in the password) then just make it a button.
Comment 1 Christoph Feck 2013-12-11 16:24:44 UTC
Note that KDE has a global setting for showing none, one, or three dots for each password character, so the user can already decide.
Comment 2 Alex Fiestas 2013-12-22 03:24:53 UTC
I don't get this bug, if you switch the user all data you introduced is reset as you point in this other bug: https://bugs.kde.org/show_bug.cgi?id=328662. Are they duplicates then?
Comment 3 Christoph Feck 2014-02-09 13:32:57 UTC
If you can provide the information requested in comment #2, please add it.
Comment 4 Alex Fiestas 2014-06-28 15:33:09 UTC
Closing bug for lack of feedback.

Please if you are still able to reproduce this bug re-open it!
Comment 5 Nate Graham 2019-08-22 18:15:02 UTC
Still a problem.
Comment 6 Nate Graham 2019-08-22 18:15:14 UTC
*** Bug 411143 has been marked as a duplicate of this bug. ***
Comment 7 Méven Car 2019-08-23 14:23:36 UTC
Git commit 52ea204e39d5160d72066a573ec180baff4b0b63 by Méven Car.
Committed on 23/08/2019 at 14:23.
Pushed by meven into branch 'master'.

Replace the PasswordEdit field by a changePassword QPushButton, remove foreach uses

Summary:

The current behavior to change password is quite unfriendly to say the least.
Clicking in a line field to open a dialog is not logical.
Replace this with a much simpler button leading to the dialog.

Test Plan:
Compile
kcmshell5 user_manager
Tried changing your password
Tried adding a user

Before:
{F7269649}

After:

{F7269690}

Reviewers: #plasma, ngraham, davidedmundson, sitter, #vdg, GB_2

Reviewed By: #plasma, ngraham, davidedmundson, #vdg, GB_2

Subscribers: nicolasfella, GB_2, plasma-devel

Tags: #plasma, #vdg

Differential Revision: https://phabricator.kde.org/D23337

M  +0    -1    src/CMakeLists.txt
M  +5    -13   src/account.ui
M  +7    -23   src/accountinfo.cpp
M  +2    -1    src/accountinfo.h
M  +2    -2    src/avatargallery.cpp
M  +2    -2    src/lib/accountmodel.cpp
M  +2    -2    src/lib/usersessions.cpp
D  +0    -32   src/passwordedit.cpp
D  +0    -39   src/passwordedit.h

https://commits.kde.org/user-manager/52ea204e39d5160d72066a573ec180baff4b0b63